cambios por terminos

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -340,6 +340,13 @@
   Timestamp                = {2015.10.22}
 }
 
+@inproceedings{Ferre2003,
+  title={Integration of Usability Techniques into the Software Development Process},
+  author={Xavier Ferr{\'e}},
+  booktitle={ICSE Workshop on SE-HCI},
+  year={2003}
+}
+
 @Phdthesis{Ferre2005,
   Title                    = {Marco de integración de la usabilidad en el proceso de desarrollo software},
   Author                   = {Ferré Grau, Xavier},
@@ -347,6 +354,21 @@
   Owner                    = {Daniel},
   School                   = {Universidad Politécnica de Madrid},
   Timestamp                = {2017.04.11}
+}
+
+@InProceedings{Ferre2005b,
+author="Ferre, Xavier
+and Juristo, Natalia
+and Moreno, Ana M.",
+editor="Bomarius, Frank
+and Komi-Sirvi{\"o}, Seija",
+title="Framework for Integrating Usability Practices into the Software Process",
+booktitle="Product Focused Software Process Improvement",
+year="2005",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="202--215",
+isbn="978-3-540-31640-4"
 }
 
 @Article{Ferreira2012,
