--- a/tex/conclusions.tex
+++ b/tex/conclusions.tex
@@ -1,10 +1,8 @@
 \section{Conclusiones}\label{sec-conclusions}
 
-En esta investigación determinamos qué técnicas de usabilidad se están adoptando en los proyectos de desarrollo ágil y analizamos cómo se están adoptando. Además, identificamos cómo algunos de los PDSA están adaptando las técnicas para poder ser adoptadas. Las técnicas relacionadas con las actividades de Evaluación más utilizadas son Test de Usabilidad, Evaluación Heurística, Pensar en Voz Alta y Focus Groups. Por un lado, muchas técnicas de usabilidad relacionadas con las actividades de Evaluación pueden ser adoptadas tal cual lo prescribe la IPO (por ejemplo, Focus Groups), mientras que otras requieren de adaptaciones para poder ser adoptadas en algunos proyectos ágiles (por ejemplo, Evaluación Heurística y Test de Usabilidad). Sin embargo, estas adaptaciones no son generalizadas ni prescriptivas, lo que hace necesario un mayor esfuerzo de investigación al respecto y determinar que técnicas de usabilidad pueden ser incorporadas en las actividades de Evaluación de los PDSA. Según los resultados de nuestro SMS, parece que no existen propuestas formalizadas de incorporación de las técnicas de usabilidad en los PDSA que establezcan guías de cómo incorporar cada técnica. Nuestra investigación busca realizar un aporte para intentar resolver este problema.\par
+En esta investigación determinamos qué UEMs se están adoptando en los proyectos de desarrollo ágil y analizamos cómo se están adoptando. Además, identificamos cómo algunos de los PDSA están adaptando las UEMs para poder ser adoptadas. Identificamos que la mayoría (66\%) de adopciones de UEM reportadas en la literatura son propuestas adaptadas es decir, requieren de modificaciones para poder ser utilizadas dentro de un ambiente ágil. Las UEMs más utilizadas son Test de Usabilidad, Evaluación Heurística, Pensar en Voz Alta y Focus Groups. Por un lado, muchas UEMs pueden ser adoptadas tal cual lo prescribe la IPO (por ejemplo, Focus Groups), mientras que otras requieren de adaptaciones para poder ser adoptadas en algunos proyectos ágiles (por ejemplo, Evaluación Heurística y Test de Usabilidad). Sin embargo, estas adaptaciones no son generalizadas ni prescriptivas. Además estas adaptaciones son realizadas generalmente por practicantes de DCU que trabajan en conjunto con equipos ágiles, lo que hace necesario un mayor esfuerzo de investigación al respecto y determinar que UEMs pueden ser incorporadas en las actividades de Evaluación de los PDSA. Según los resultados de nuestro SMS, parece que no existen propuestas formalizadas de incorporación de las UEMs en los PDSA que establezcan guías de cómo incorporar cada técnica. Nuestra investigación busca realizar un aporte para intentar resolver este problema.\par
 
-Identificamos dos adaptaciones principales que la comunidad de desarrollo ágil está realizando a las técnicas de la IPO relacionadas con la actividad de Evaluación, para poder ser incorporadas en los PDSA. La primera adaptación consiste en realizar las actividades de las técnicas de evaluación de la usabilidad colaborando con equipos DCU y trabajando en sprints paralelos. La segunda adaptación, consiste en reducir costos y esfuerzo de planeación de la técnica para generar planes más informales que permitan ser aplicadas en ciclos cortos.\par
+Nuestros resultados sugieren que la comunidad de desarrollo ágil está adoptando métodos de usabilidad en sus proyectos de desarrollo, con especial interés en las UEMs. Existen propuestas para aplicarlas tanto puras como con modificaciones, pero no hay un consenso de como será la mejor manera de adaptarlas. Esto puede deberse a la falta de una propuesta general, prescriptiva y sistemática que permita a los equipos de desarrollo ágiles adoptar métodos de usabilidad en sus proyectos de desarrollo.\par
 
-Nuestros resultados sugieren que la comunidad de desarrollo ágil está adoptando técnicas de usabilidad en sus proyectos de desarrollo, con especial interés en las técnicas de evaluación de la usabilidad. Existen propuestas para aplicarlas tanto puras como con modificaciones, pero no hay un consenso de como será la mejor manera de adaptarlas. Esto puede deberse a la falta de una propuesta general, prescriptiva y sistemática que permita a los equipos de desarrollo ágiles adoptar técnicas de usabilidad en sus proyectos de desarrollo.\par
-
-Como trabajos futuros, consideramos ampliar las búsquedas de artículos para cubrir otras BBDD, como, por ejemplo, SpringerLink y ScienceDirect. El objetivo es aumentar el número de trabajos relevantes recuperados, para poder encontrar otras propuestas de aplicación de técnicas de usabilidad, ya que hemos identificado que hay un gran interés en este tema dentro de la comunidad científica. Además, como trabajos futuros, vamos a adaptar técnicas de usabilidad relacionadas con las actividades de evaluación para su incorporación en un proyecto de desarrollo ágil real. A largo plazo, nuestra investigación considera la creación de un marco de integración de técnicas de usabilidad que guíe a los practicantes ágiles en cómo adaptar sistemáticamente estas técnicas y poder reducir los tiempos de evaluación a fin de cumplir con los tiempos reducidos de las iteraciones ágiles.\par
+Como trabajos futuros, consideramos ampliar las búsquedas de artículos para cubrir otras BBDD, como, por ejemplo, SpringerLink y ScienceDirect. El objetivo es aumentar el número de trabajos relevantes recuperados, para poder encontrar otras propuestas de aplicación de métodos de usabilidad, ya que hemos identificado que hay un gran interés en este tema dentro de la comunidad científica. Además, como trabajos futuros, vamos a adaptar UEMs para su incorporación en un proyecto de desarrollo ágil real. A largo plazo, nuestra investigación considera la creación de un marco de integración de métodos de usabilidad que guíe a los practicantes ágiles en cómo adaptar sistemáticamente estos métodos y poder reducir los tiempos de evaluación a fin de cumplir con los tiempos reducidos de las iteraciones ágiles.\par
 
