--- a/tex/related.tex
+++ b/tex/related.tex
@@ -1,18 +1,16 @@
 \section{Trabajos Relacionados}\label{sec-relacionados}
-Para investigar de manera general, entre otros aspectos, las técnicas de usabilidad que pueden ser incorporadas en los PDSA, algunos investigadores han realizado estudios empíricos \cite{Broschinsky2008,Grigoreanu2013,Hodgetts2005}, mientras que otros pocos han estudiado la literatura \cite{Salah2014b,Brhel2015}. El objetivo de nuestra investigación es conocer el estado actual de la usabilidad en los PDSA desde una perspectiva más amplia. Para analizar los beneficios de la usabilidad en los PDSA e identificar qué técnicas de usabilidad relacionadas con la actividad de Evaluación están siendo adoptadas y cómo están siendo adoptadas, hemos llevado a cabo un \textit{Systematic Mapping Study} (SMS) sobre la usabilidad y los PDSA. 
+Para investigar de manera general, entre otros aspectos, las técnicas de usabilidad que pueden ser incorporadas en los PDSA, algunos investigadores han realizado estudios empíricos \cite{Broschinsky2008,Grigoreanu2013,Hodgetts2005}, mientras que otros pocos han estudiado la literatura \cite{Salah2014b,Brhel2015}. El objetivo de nuestra investigación es conocer el estado actual de la usabilidad en los PDSA desde una perspectiva más amplia. Para analizar los beneficios de la usabilidad en los PDSA e identificar qué técnicas de usabilidad relacionadas con la actividad de Evaluación están siendo adoptadas y cómo están siendo adoptadas, hemos llevado a cabo un \textit{Systematic Mapping Study} (SMS) sobre la usabilidad y los PDSA.
 
-Encontramos cinco trabajos \cite{Brhel2015}\cite{Sohaib2010}\cite{Salah2014b}\cite{DaSilva2011}\cite{Jurca2014} que son revisiones sistematicas relacionadas con nuestra pregunta de investigación. El primer paper de Brhel y colegas \cite{Brhel2015} revisa la literatura dividiendola en cuatro dimensiones de integración (procesos, prácticas, tecnología y gente/social), y aunque logra identificar las practicas más usadas, concluye que la traducción de las prácticas de desarrollo ágil centrado en el usuario de la academia a la práctica sigue siendo un desafío. El segundo trabajo por Sohaib y Khan \cite{Sohaib2010} una revisi\'{o}n de literatura e identifica que los proyectos ágiles deben adoptar aspectos de ingeniería de usabilidad incorporando escenarios de usuario e incluyendo especialistas en usabilidad en el equipo. El tercer trabajo por Salah y colegas \cite{Salah2014b} tiene como objetivo identificar y clasificar varios factores desafiantes que restringen la integración Agil-Diseño centrado en el usuario y explorar las pr\'{a}cticas propuestas y los factores de \'{e}xito para enfrentar estos desafíos. El cuarto trabajo de Da Silva y colegas \cite{DaSilva2011} reportan una revisión de literatura que ha identificado temas recurrentes y patrones de las actividades y artefactos más comunes utilizados por equipos de diseñadores que integran PDSA y DCU.
-
- sistemática sobre la integración  on the integration of agile software development with UCD methods. Por último, Jurca \cite{Jurca2014} realiza un SMS que permite evaluar la integración Agile-UX desde varias tendencias como el uso de sprints 0 o LDUF, problemas organizacionales y recomendaciones para la integracion, artefatos y practicas mas comunes (Workshops, Lo-Fi Prototyping, Interviews, Meetings with Users and Scenarios) y marcos de integración. Aunque, estos trabajos describen \cite{Brhel2015}\cite{Sohaib2010}\cite{Salah2014b}\cite{DaSilva2011}\cite{Jurca2014} el estado de la integación entre el DCU y los PDSA desde diferentes puntos de vista, sin embargo no precisa que métodos y cómo estan siendo usados los UEM dentro de los PDSA, siendo que los UEM no son los más sencillos de aplicar en los PDSA \cite{Jia2012}.
+Encontramos cinco trabajos \cite{Brhel2015,Sohaib2010,Salah2014b,DaSilva2011,Jurca2014} que son revisiones sistematicas relacionadas con nuestra pregunta de investigación. El primer paper de Brhel y colegas \cite{Brhel2015} revisa la literatura dividiendola en cuatro dimensiones de integración (procesos, prácticas, tecnología y gente/social), y aunque logra identificar las practicas más usadas, concluye que la traducción de las prácticas de desarrollo ágil centrado en el usuario de la academia a la práctica sigue siendo un desafío. El segundo trabajo por Sohaib y Khan \cite{Sohaib2010} es una revisi\'{o}n de literatura e identifica que los proyectos ágiles deben adoptar aspectos de ingeniería de usabilidad incorporando escenarios de usuario e incluyendo especialistas en usabilidad en el equipo. El tercer trabajo por Salah y colegas \cite{Salah2014b} tiene como objetivo identificar y clasificar varios factores desafiantes que restringen la integración PDSA-DCU y explorar las pr\'{a}cticas propuestas y los factores de \'{e}xito para enfrentar estos desafíos. El cuarto trabajo de Da Silva y colegas \cite{DaSilva2011} reportan una revisión de literatura que ha identificado temas recurrentes y patrones de las actividades y artefactos más comunes utilizados por equipos de diseñadores DCU para la integración con equipos de desarrolladores en PDSA. Por último, Jurca \cite{Jurca2014} realiza un SMS que permite evaluar la integración PDAS-DCU desde varias tendencias como el uso de sprints 0 o LDUF, problemas organizacionales y recomendaciones para la integracion, artefatos y practicas mas comunes (Workshops, Lo-Fi Prototyping, Interviews, Meetings with Users and Scenarios) y marcos de integración. Aunque, estos trabajos \cite{Brhel2015,Sohaib2010,Salah2014b,DaSilva2011,Jurca2014} describen el estado de la integación entre el DCU y los PDSA desde diferentes puntos de vista, sin embargo no precisan cómo estan siendo adoptados los UEM por los propios practicantes de los PDSA, siendo que los UEM no son los más complejos de aplicar por las restricciones que imponen los PDSA \cite{Salah2014b}.
 
 
 %Este SMS se diferencia de otros trabajos similares \cite{Salah2014b}\cite{Brhel2015}\cite{DaSilva2011} porque busca identificar en la literatura existente trabajos con propuestas que permitan incorporar un conjunto de técnicas de usabilidad para integrar los PDSA con el DCU de una manera formalizada y sistematizada. Aspecto que ninguno de los tres trabajos similares mencionados anteriormente considera.\par
 
-La literatura sobre la integración de técnicas de usabilidad en los PDSA está compuesta por un conjunto de publicaciones desacopladas que estudian diferentes aspectos del tema. En este conjunto, se identifican dos problemas. En primer lugar, existen pocos trabajos que estudian como un todo el tema y reportan cuál es el estado actual de la integración de los PDSA con el DCU \cite{Brhel2015,DaSilva2011,Sohaib2010}. En segundo lugar, no existen propuestas formalizadas de incorporación de las técnicas de usabilidad en los PDSA \cite{Ferreira2012,Hodgetts2005,Hussain2009b} que establezcan, para cada técnica, guías sobre como incorporarlas.
+La literatura sobre la integración de técnicas de usabilidad en los PDSA está compuesta por un conjunto de publicaciones desacopladas que estudian diferentes aspectos del tema. En este conjunto, se identifican dos problemas. En primer lugar, existen pocos trabajos que estudian como un todo el tema y reportan cuál es el estado actual de la integración de los PDSA con el DCU \cite{Brhel2015,DaSilva2011,Sohaib2010,Salah2014b,Jurca2014}. En segundo lugar, no existen propuestas formalizadas de incorporación de las técnicas de usabilidad en los PDSA \cite{Ferreira2012,Hodgetts2005,Hussain2009b} que establezcan, para cada técnica, guías sobre como incorporarlas.
 
-Con el fin de investigar qué técnicas de usabilidad se están utilizando en los PDSA para producir sistemas usables, es preciso identificar primero el universo de las técnicas de la IPO. Esto no es una labor sencilla, porque existe una amplia gama de técnicas de usabilidad de la IPO, donde la misma técnica puede ser referida de manera diferente dependiendo del autor y puede existir más de una variante para la misma técnica. Afortunadamente, otros investigadores de la ingeniería de software (IS) ya han realizado el trabajo de compilar un catálogo de técnicas de la IPO, como es el caso de Ferré \cite{Ferre2005}, quien compiló una lista de técnicas de las fuentes más reconocidas en el área de la IPO. A continuación, se presenta un breve resumen de este catálogo que debería ayudar a los lectores a seguir el resto del documento y a comprender qué técnicas de usabilidad se están aplicando actualmente en los PDSA y cómo se están adoptando.\par
+Con el fin de investigar qué técnicas de usabilidad se están utilizando en los PDSA para producir sistemas usables, es preciso identificar primero el universo de las técnicas de la IPO. Esto no es una labor sencilla, porque existe una amplia gama de técnicas de usabilidad de la IPO, donde la misma técnica puede ser referida de manera diferente dependiendo del autor y puede existir más de una variante para la misma técnica. Afortunadamente, otros investigadores de la ingeniería de software (IS) ya han realizado el trabajo de compilar un catálogo de técnicas de la IPO, como es el caso de Ferré \cite{Ferre2005}\cite{Ferre2005b}, quien compiló una lista de técnicas de las fuentes más reconocidas en el área de la IPO. A continuación, se presenta un breve resumen de este catálogo que debería ayudar a los lectores a seguir el resto del documento y a comprender qué técnicas de usabilidad se están aplicando actualmente en los PDSA y cómo se están adoptando.\par
 
-Según Ferré \cite{Ferre2005}, las actividades más representativas del proceso de la IPO son la especificación de contexto de uso, especificaciones de usabilidad, desarrollo de concepto del producto, prototipado, diseño de la interacción y evaluación de la usabilidad. Ferré \cite{Ferre2005} traza estas actividades (y sus respectivas técnicas asociadas) a las principales etapas de desarrollo de la IS. En algunos casos, las actividades de la IPO se integran en las actividades existentes de la IS. Por ejemplo, la actividad de especificaciones de usabilidad se puede integrar en la especificación de requisitos. En otros casos, sin embargo, otras actividades que normalmente no se llevan a cabo en un proceso de desarrollo no centrado en el usuario, como el diseño de la interacción, tienen que ser agregadas. Estas actividades adicionales serán referidas como se acostumbra en la comunidad de la IPO. Las actividades de la IPO han sido mapeadas teniendo en cuenta las etapas de desarrollo de la IS: Ingenierí­a de requisitos, diseño y evaluación. La actividad de la IPO diseño de la interacción se ha asignado a la actividad de diseño de la IS. Es importante mencionar, que las técnicas de la IPO en el catálogo están clasificadas en tres grandes grupos: técnicas relacionadas con las actividades de la ingeniería de requisitos, técnicas relacionadas con las actividades de diseño y técnicas relacionadas con las actividades de evaluación. El análisis de las técnicas de usabilidad relacionadas con las actividades de la Ingeniería de Requisitos han sido reportadas en \cite{Magues2016c}. En este trabajo nos centramos en las actividades de Evaluación, es decir, en el estudio de cómo están siendo incorporadas por los PDSA las técnicas de usabilidad relacionadas con esta actividad.\par
+Según Ferré \cite{Ferre2003,Ferre2005,Ferre2005b}, las actividades más representativas del proceso de la IPO son la especificación de contexto de uso, especificaciones de usabilidad, desarrollo de concepto del producto, prototipado, diseño de la interacción y evaluación de la usabilidad. Ferré \cite{Ferre2003,Ferre2005,Ferre2005b} traza estas actividades (y sus respectivas técnicas asociadas) a las principales etapas de desarrollo de la IS. En algunos casos, las actividades de la IPO se integran en las actividades existentes de la IS. Por ejemplo, la actividad de especificaciones de usabilidad se puede integrar en la especificación de requisitos. En otros casos, sin embargo, otras actividades que normalmente no se llevan a cabo en un proceso de desarrollo no centrado en el usuario, como el diseño de la interacción, tienen que ser agregadas. Estas actividades adicionales serán referidas como se acostumbra en la comunidad de la IPO. Las actividades de la IPO han sido mapeadas teniendo en cuenta las etapas de desarrollo de la IS: Ingenierí­a de requisitos, diseño y evaluación. La actividad de la IPO diseño de la interacción se ha asignado a la actividad de diseño de la IS. Es importante mencionar, que las técnicas de la IPO en el catálogo están clasificadas en tres grandes grupos: técnicas relacionadas con las actividades de la ingeniería de requisitos, técnicas relacionadas con las actividades de diseño y técnicas relacionadas con las actividades de evaluación. El análisis de las técnicas de usabilidad relacionadas con las actividades de la Ingeniería de Requisitos han sido reportadas en \cite{Magues2016c}. En este trabajo nos centramos en las actividades de Evaluación, es decir, en el estudio de cómo están siendo incorporadas por los PDSA las técnicas de usabilidad relacionadas con esta actividad.\par
 
 %%[ME ESTÁ FALTANDO UN PAR DE LÍNEAS EN LAS QUE SE DIGAN QUE VAMOS HACER CON ESTO DE FERRÉ. ESTO PODRÍA SER AÑADIDO A LA ÚLTIMA ORACIÓN].
 %% Justo antes del párrafo de Ferré se comenta porque hacemos mención a este catalogo.
